--- a/part7/Client/styles/main.css
+++ b/part7/Client/styles/main.css
@@ -154,6 +154,30 @@ footer {
 	border: 0px solid silver;
 }
 
+.buttonUser {
+	background-color: #FFFFFF;
+	border-radius: 10px;
+	border: 0.5px solid silver;
+	font-family: Comic Sans MS;
+	width: 45%;
+	margin-top: 5px;
+	margin-bottom: 5px;
+	margin-left: 10px;
+}
+
+.buttonUser:hover  {
+	background-color: #0077FF;
+	color: #FFFFFF;
+	border: 0px solid silver;
+	cursor: pointer;
+}
+
+.buttonUser:active {
+	background-color: #004EA6;
+	color: #FFFFFF;
+	border: 0px solid silver;
+}
+
 .videoInMainPage {
 	width: 100%;
 	margin-bottom: 2%;
@@ -217,6 +241,16 @@ footer {
 }
 
 .inputStyleTags {
+	border-radius: 3px;
+	height: 25px;
+	margin-left: 10px;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	width: 363px;
+	font-family: Comic Sans MS;
+}
+
+.inputStyleUser {
 	border-radius: 3px;
 	height: 25px;
 	margin-left: 10px;
